<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:src="@drawable/logo"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_APP"/>
    </LinearLayout>
    <View
        android:background="#99333333"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <TextView
        style="@style/NavigationDrawerSection"
        android:id="@+id/executionSection"
        android:text="@string/execution_mode"
        app:drawableLeftCompat="@drawable/ic_execution_mode"
        android:layout_width="match_parent"/>
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/runInteractive"
        android:text="@string/execution_interactive"
        app:drawableLeftCompat="@drawable/ic_interactive_execution"
        android:layout_width="match_parent"/>
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/runMultiple"
        android:text="@string/execution_multiple"
        app:drawableLeftCompat="@drawable/ic_multiple_execution"
        android:layout_width="match_parent"/>
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/runSingle"
        android:text="@string/execution_single"
        app:drawableLeftCompat="@drawable/ic_single_execution"
        android:layout_width="match_parent"/>
    <View
        android:background="#99333333"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <TextView
        style="@style/NavigationDrawerSection"
        android:id="@+id/optionsSection"
        android:text="@string/ic_action_options"
        app:drawableLeftCompat="@drawable/ic_options_action"
        android:layout_width="match_parent"/>
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/runGlobe"
        android:text="@string/option_run_globe"
        app:drawableLeftCompat="@drawable/ic_globe"
        android:layout_width="match_parent"
        />
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/runMap"
        android:text="@string/option_run_map"
        app:drawableLeftCompat="@drawable/ic_map_icon"
        android:layout_width="match_parent" />
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/runBoth"
        android:text="@string/run_both"
        app:drawableLeftCompat="@drawable/ic_map"
        android:layout_width="match_parent"
        />
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/seeView"
        android:text="See test execution on View"
        app:drawableLeftCompat="@drawable/ic_view"
        android:layout_width="match_parent"/>
    <View
        android:background="#99333333"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/separator_1"/>

    <TextView
        style="@style/NavigationDrawerSection"
        android:id="@+id/actionSection"
        android:text="@string/action_section"
        app:drawableLeftCompat="@drawable/ic_list_option"
        android:layout_width="match_parent"/>
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/selectAll"
        android:text="@string/selectAll_section"
        app:drawableLeftCompat="@drawable/ic_selectall_action"
        android:layout_width="match_parent"
        />
    <TextView
        style="@style/NavigationDrawerItem"
        android:id="@+id/deselectAll"
        android:text="@string/deselectAll_option"
        app:drawableLeftCompat="@drawable/ic_deselectall_action"
        android:layout_width="match_parent" />

    <View
        android:background="#99333333"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/separator_2"/>

</merge>
